basic plugin structure defined and sbt-scripted tests set up